# barilo

./: .envrc  .gitignore  Dockerfile  README.md  bun.lockb  deploy  deploy.sh  docker-compose.yml  lefthook.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: barilo-rest-api.yml  (+1 more)
services/barilo-api/: Dockerfile  assistant.ts  barilo  bun.lockb  docker-entry.sh  global.d.ts  package.json  pyproject.toml  server.ts  tsconfig.json  wait_for_postgres.py
services/barilo-api/accounts/: tests.py  urls.py  views.py
services/barilo-api/accounts/migrations/: 0002_usergeolocation.py
services/barilo-api/cart/: cart.py  urls.py  views.py
services/barilo-api/circulars/: admin.py  apps.py  models.py  producers.py  serializers.py  urls.py  views.py
services/barilo-api/circulars/migrations/: 0001_initial.py  0002_alter_circularproduct_product.py
services/barilo-api/cmd/rest-server/: main.go
services/barilo-api/comparisons/: admin.py  consumers.py  interfaces.py  models.py  services.py  urls.py  views.py
services/barilo-api/comparisons/migrations/: 0001_initial.py  0002_productbucket_productbucketitem_delete_productindex.py
services/barilo-api/conf/: gunicorn.conf.py  nginx.conf  supervisor_barilo_rest_api.conf
services/barilo-api/core/: authentication.py  grpc.py  settings.py  urls.py
services/barilo-api/internal/: README.md  params.go  store.go  store_test.go  user.go
services/barilo-api/internal/agolia/: product.go
services/barilo-api/internal/postgresql/: circular_repository.go  discount_repository.go  product.go  product_repository.go  sqlc.yaml  store.go  store_repository.go
services/barilo-api/internal/rest/: rest.go  store.go  store_controller.go
services/barilo-api/internal/services/: recipe.go  store.go  store_service.go
services/barilo-api/lib/logging/: zap.go
services/barilo-api/lib/postgresql/: postgresql.go
services/barilo-api/markets/: admin.py  consumers.py  models.py  producers.py  serializers.py  tests.py  urls.py  views.py  workers.py
services/barilo-api/products/: admin.py  models.py  producers.py  services.py
services/barilo-api/ranks/: apps.py  serializers.py
services/barilo-api/src/: server.ts
services/barilo-api/systemd/: barilo_api.service
services/barilo-consumer/: README.md  main.py  pyproject.toml  test.py
services/barilo-consumers/: consumers.py  main.py  pyproject.toml  services.py
services/barilo-consumers/cmd/: rest-api.py
services/barilo-csv-uploader/: pyproject.toml
services/barilo-rest-api/: db.sqlite3  docker-entry.sh  manage.py  pyproject.toml
services/barilo-rest-api/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
services/barilo-rest-api/core/: authentication.py  grpc.py  settings.py  urls.py
services/barilo-rest-api/markets/: admin.py  consumers.py  models.py  producers.py  serializers.py  urls.py  views.py
services/barilo-rest-api/ranks/: admin.py  apps.py  models.py  services.py  urls.py  views.py
services/barilo-rest-api/stores/: admin.py  models.py  serializers.py  urls.py  views.py
(+672 files in other folders)
