[tool.poetry]
name = "barilo-consumer"
version = "0.1.0"
description = ""
authors = ["Pedro Santos <pedro357bm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.0"
fastapi = "^0.111.0"
pandas = "^2.2.2"
ruff = "^0.4.5"
rapidfuzz = "^3.9.1"
pika = "^1.3.2"
structlog = "^24.1.0"
grpcio-tools = "^1.64.0"
grpcio = "^1.64.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
